--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,10 @@
 
     </div>
 
+    <div>
+      <a href="/results">results</a>
+    </div>
+
 
     <!---------- 'LOGIN' ----------->
 
@@ -37,222 +41,229 @@
       <label id='naamKey' for='naam'>Naam</label>
       <input type='text' id='naam' name='naam' required>
 
+
+      </br>
+
       <label id='studentnummerKey' for='studentnummer'>Studentnummer</label>
       <input type='text' id='studentnummer' name='studentnummer' required>
 
+
+      </br>
 
       <button type="button" id="loginButton">Verder</button>
 
 
 
-      <!-- <button type="button" id="submitButton">Submit</button> -->
-
-
       <!---------- WAFS ----------->
-      <!-- 
+
       <h2>Vak 1</h2>
       <h3>Web App From Scratch</h3>
 
-      <h4>Wie was je docent?</h4>
-      <label for='WAFSdocent'>
-        <input type='text' id='WAFSdocent' name='WAFSdocent' required>
-      </label>
+      <label id='WAFSdocentKey' for='WAFSdocent'>Wie was je docent?</label>
+      <input type='text' id='WAFSdocent' name='WAFSdocent' required>
 
+
+      </br>
 
       <h4>Tijdens welke weken heb je het vak gevolgd?</h4>
-      <label for='WAFSweken1-4'>
-        <input type='radio' id='WAFSweken1-4' name='WAFSweken' value='1-4'>
-        Week 1 - 4</label>
-
-      <label for='WAFSweken4-9'>
-        <input type='radio' id='WAFSweken5-9' name='WAFSweken' value='5-9'>
-        Week 5 - 9</label>
-
-      <label for='WAFSweken10-14'>
-        <input type='radio' id='WAFSweken10-14' name='WAFSweken' value='10-14'>
-        Week 10 - 14</label>
+      <label id='WAFSweken1-4Key' for='WAFSweken1-4'>Week 1 - 4</label>
+      <input type='radio' id='WAFSweken1-4' name='WAFSweken' value='1-4' checked>
 
 
-      <h4>Hoe vond je het vak qua moeilijkheidsgraad?</h4>
-      <label for='WAFSmoeilijk'>
-        <input type='text' id='WAFSmoeilijk' name='WAFSmoeilijk' required>
-      </label>
+      </br>
+
+      <label id='WAFSweken5-9Key' for='WAFSweken4-9'>Week 5 - 9</label>
+      <input type='radio' id='WAFSweken5-9' name='WAFSweken' value='5-9'>
 
 
-      <h4>Wat vond je van de gegeven uitleg bij dit vak?</h4>
-      <label for='WAFSuitleg'>
-        <input type='text' id='WAFSuitleg' name='WAFSuitleg' required>
-      </label>
+      </br>
+
+      <label id='WAFSweken10-14Key' for='WAFSweken10-14'>Week 10 - 14</label>
+      <input type='radio' id='WAFSweken10-14' name='WAFSweken' value='10-14'>
 
 
-      <h4>Hoe goed denk je dat je dit vak nu snapt?</h4>
-      <label for='WAFSsnappen'>
-        <input type='text' id='WAFSsnappen' name='WAFSsnappen' required>
-      </label>
+      </br>
+      </br>
+
+      <label id='WAFSmoeilijkKey' for='WAFSmoeilijk'>Hoe vond je het vak qua moeilijkheidsgraad?</label>
+      <input type='text' id='WAFSmoeilijk' name='WAFSmoeilijk' required>
 
 
-      <h4>Wat voor cijfer geef je het vak?</h4>
-      <label for='WAFScijfer'>
-        <input type='number' min='1' max='10' id='WAFScijfer' name='WAFScijfer' required>
-      </label> -->
+      </br>
+
+      <label id='WAFSuitlegKey' for='WAFSuitleg'>Wat vond je van de gegeven uitleg bij dit vak?</label>
+      <input type='text' id='WAFSuitleg' name='WAFSuitleg' required>
 
 
+      </br>
 
+      <label id='WAFSsnappenKey' for='WAFSsnappen'>Hoe goed denk je dat je dit vak nu snapt?</label>
+      <input type='text' id='WAFSsnappen' name='WAFSsnappen' required>
+
+
+      </br>
+
+      <label id='WAFScijferKey' for='WAFScijfer'>Wat voor cijfer geef je het vak?</label>
+      <input type='number' min='1' max='10' id='WAFScijfer' name='WAFScijfer' required>
+
+
+      </br>
+
+      <button type="button" id="wafsButton">Verder</button>
 
 
       <!---------- CSSttR ----------->
 
-      <!-- <h2>Vak 2</h2>
+      <h2>Vak 2</h2>
       <h3>CSS to the Rescue</h3>
 
-      <h4>Wie was je docent?</h4>
-      <label for='CSSttRdocent'>
-        <input type='text' id='CSSttRdocent' name='CSSttRdocent' required>
-      </label>
+      <label id='CSSTTRdocentKey' for='CSSTTRdocent'>Wie was je docent?</label>
+      <input type='text' id='CSSTTRdocent' name='CSSTTRdocent' required>
 
+      </br>
 
       <h4>Tijdens welke weken heb je het vak gevolgd?</h4>
-      <label for='CSSttRweken1-4'>
-        <input type='radio' id='CSSttRweken1-4' name='CSSttRweken14'>
-        Week 1 - 4</label>
+      <label id='CSSTTRweken1-4Key' for='CSSTTRweken1-4'>Week 1 - 4</label>
+      <input type='radio' id='CSSTTRweken1-4' name='CSSTTRweken' value='1-4' checked>
 
-      <label for='CSSttRweken4-9'>
-        <input type='radio' id='CSSttRweken5-9' name='CSSttRweken59'>
-        Week 5 - 9</label>
+      </br>
 
-      <label for='CSSttRweken10-14'>
-        <input type='radio' id='CSSttRweken10-14' name='CSSttRweken1014'>
-        Week 10 - 14</label>
+      <label id='CSSTTRweken5-9Key' for='CSSTTRweken4-9'>Week 5 - 9</label>
+      <input type='radio' id='CSSTTRweken5-9' name='CSSTTRweken' value='5-9'>
 
+      </br>
 
-      <h4>Hoe vond je het vak qua moeilijkheidsgraad?</h4>
-      <label for='CSSttRmoeilijk'>
-        <input type='text' id='CSSttRmoeilijk' name='CSSttRmoeilijk' required>
-      </label>
+      <label id='CSSTTRweken10-14Key' for='CSSTTRweken10-14'>Week 10 - 14</label>
+      <input type='radio' id='CSSTTRweken10-14' name='CSSTTRweken' value='10-14'>
 
+      </br>
+      </br>
 
-      <h4>Wat vond je van de gegeven uitleg bij dit vak?</h4>
-      <label for='CSSttRuitleg'>
-        <input type='text' id='CSSttRuitleg' name='CSSttRuitleg' required>
-      </label>
+      <label id='CSSTTRmoeilijkKey' for='CSSTTRmoeilijk'>Hoe vond je het vak qua moeilijkheidsgraad?</label>
+      <input type='text' id='CSSTTRmoeilijk' name='CSSTTRmoeilijk' required>
 
+      </br>
 
-      <h4>Hoe goed denk je dat je dit vak nu snapt?</h4>
-      <label for='CSSttRsnappen'>
-        <input type='text' id='CSSttRsnappen' name='CSSttRsnappen' required>
-      </label>
+      <label id='CSSTTRuitlegKey' for='CSSTTRuitleg'>Wat vond je van de gegeven uitleg bij dit vak?</label>
+      <input type='text' id='CSSTTRuitleg' name='CSSTTRuitleg' required>
 
+      </br>
 
-      <h4>Wat voor cijfer geef je het vak?</h4>
-      <label for='CSSttRcijfer'>
-        <input type='number' min='1' max='10' id='CSSttRcijfer' name='CSSttRcijfer' required>
-      </label> -->
+      <label id='CSSTTRsnappenKey' for='CSSTTRsnappen'>Hoe goed denk je dat je dit vak nu snapt?</label>
+      <input type='text' id='CSSTTRsnappen' name='CSSTTRsnappen' required>
 
+      </br>
 
+      <label id='CSSTTRcijferKey' for='CSSTTRcijfer'>Wat voor cijfer geef je het vak?</label>
+      <input type='number' min='1' max='10' id='CSSTTRcijfer' name='CSSTTRcijfer' required>
 
+      </br>
+
+      <button type="button" id="cssttrButton">Verder</button>
 
 
 
       <!---------- PWA ----------->
 
-      <!-- <h2>Vak 3</h2>
+      <h2>Vak 3</h2>
       <h3>Progressive Web App</h3>
 
-      <h4>Wie was je docent?</h4>
-      <label for='PWAdocent'>
-        <input type='text' id='PWAdocent' name='PWAdocent' required>
-      </label>
+      <label id='PWAdocentKey' for='PWAdocent'>Wie was je docent?</label>
+      <input type='text' id='PWAdocent' name='PWAdocent' required>
 
+      </br>
 
       <h4>Tijdens welke weken heb je het vak gevolgd?</h4>
-      <label for='PWAweken1-4'>
-        <input type='radio' id='PWAweken1-4' name='PWAweken14'>
-        Week 1 - 4</label>
+      <label id='PWAweken1-4Key' for='PWAweken1-4'>Week 1 - 4</label>
+      <input type='radio' id='PWAweken1-4' name='PWAweken' value='1-4' checked>
 
-      <label for='PWAweken4-9'>
-        <input type='radio' id='PWAweken5-9' name='PWAweken59'>
-        Week 5 - 9</label>
+      </br>
 
-      <label for='PWAweken10-14'>
-        <input type='radio' id='PWAweken10-14' name='PWAweken1014'>
-        Week 10 - 14</label>
+      <label id='PWAweken5-9Key' for='PWAweken4-9'>Week 5 - 9</label>
+      <input type='radio' id='PWAweken5-9' name='PWAweken' value='5-9'>
 
+      </br>
 
-      <h4>Hoe vond je het vak qua moeilijkheidsgraad?</h4>
-      <label for='PWAmoeilijk'>
-        <input type='text' id='PWAmoeilijk' name='PWAmoeilijk' required>
-      </label>
+      <label id='PWAweken10-14Key' for='PWAweken10-14'>Week 10 - 14</label>
+      <input type='radio' id='PWAweken10-14' name='PWAweken' value='10-14'>
 
+      </br>
+      </br>
 
-      <h4>Wat vond je van de gegeven uitleg bij dit vak?</h4>
-      <label for='PWAuitleg'>
-        <input type='text' id='PWAuitleg' name='PWAuitleg' required>
-      </label>
+      <label id='PWAmoeilijkKey' for='PWAmoeilijk'>Hoe vond je het vak qua moeilijkheidsgraad?</label>
+      <input type='text' id='PWAmoeilijk' name='PWAmoeilijk' required>
 
+      </br>
 
-      <h4>Hoe goed denk je dat je dit vak nu snapt?</h4>
-      <label for='PWAsnappen'>
-        <input type='text' id='PWAsnappen' name='PWAsnappen' required>
-      </label>
+      <label id='PWAuitlegKey' for='PWAuitleg'>Wat vond je van de gegeven uitleg bij dit vak?</label>
+      <input type='text' id='PWAuitleg' name='PWAuitleg' required>
 
+      </br>
 
-      <h4>Wat voor cijfer geef je het vak?</h4>
-      <label for='PWAcijfer'>
-        <input type='number' min='1' max='10' id='PWAcijfer' name='PWAcijfer' required>
-      </label>
- -->
+      <label id='PWAsnappenKey' for='PWAsnappen'>Hoe goed denk je dat je dit vak nu snapt?</label>
+      <input type='text' id='PWAsnappen' name='PWAsnappen' required>
 
+      </br>
+
+      <label id='PWAcijferKey' for='PWAcijfer'>Wat voor cijfer geef je het vak?</label>
+      <input type='number' min='1' max='10' id='PWAcijfer' name='PWAcijfer' required>
+
+      </br>
+
+      <button type="button" id="pwaButton">Verder</button>
 
 
 
 
       <!---------- BT ----------->
 
-      <!-- <h2>Vak 4</h2>
+      <h2>Vak 4</h2>
       <h3>Browser Technologies</h3>
 
-      <h4>Wie was je docent?</h4>
-      <label for='BTdocent'>
-        <input type='text' id='BTdocent' name='BTdocent' required>
-      </label>
+      <label id='BTdocentKey' for='BTdocent'>Wie was je docent?</label>
+      <input type='text' id='BTdocent' name='BTdocent' required>
 
+      </br>
 
       <h4>Tijdens welke weken heb je het vak gevolgd?</h4>
-      <label for='BTweken1-4'>
-        <input type='radio' id='BTweken1-4' name='BTweken14'>
-        Week 1 - 4</label>
+      <label id='BTweken1-4Key' for='BTweken1-4'>Week 1 - 4</label>
+      <input type='radio' id='BTweken1-4' name='BTweken' value='1-4' checked>
 
-      <label for='BTweken4-9'>
-        <input type='radio' id='BTweken5-9' name='BTweken59'>
-        Week 5 - 9</label>
+      </br>
 
-      <label for='BTweken10-14'>
-        <input type='radio' id='BTweken10-14' name='BTweken1014'>
-        Week 10 - 14</label>
+      <label id='BTweken5-9Key' for='BTweken4-9'>Week 5 - 9</label>
+      <input type='radio' id='BTweken5-9' name='BTweken' value='5-9'>
 
+      </br>
 
-      <h4>Hoe vond je het vak qua moeilijkheidsgraad?</h4>
-      <label for='BTmoeilijk'>
-        <input type='text' id='BTmoeilijk' name='BTmoeilijk' required>
-      </label>
+      <label id='BTweken10-14Key' for='BTweken10-14'>Week 10 - 14</label>
+      <input type='radio' id='BTweken10-14' name='BTweken' value='10-14'>
 
+      </br>
+      </br>
 
-      <h4>Wat vond je van de gegeven uitleg bij dit vak?</h4>
-      <label for='BTuitleg'>
-        <input type='text' id='BTuitleg' name='BTuitleg' required>
-      </label>
+      <label id='BTmoeilijkKey' for='BTmoeilijk'>Hoe vond je het vak qua moeilijkheidsgraad?</label>
+      <input type='text' id='BTmoeilijk' name='BTmoeilijk' required>
 
+      </br>
 
-      <h4>Hoe goed denk je dat je dit vak nu snapt?</h4>
-      <label for='BTsnappen'>
-        <input type='text' id='BTsnappen' name='BTsnappen' required>
-      </label>
+      <label id='BTuitlegKey' for='BTuitleg'>Wat vond je van de gegeven uitleg bij dit vak?</label>
+      <input type='text' id='BTuitleg' name='BTuitleg' required>
 
+      </br>
 
-      <h4>Wat voor cijfer geef je het vak?</h4>
-      <label for='BTcijfer'>
-        <input type='number' min='1' max='10' id='BTcijfer' name='BTcijfer' required>
-      </label> -->
+      <label id='BTsnappenKey' for='BTsnappen'>Hoe goed denk je dat je dit vak nu snapt?</label>
+      <input type='text' id='BTsnappen' name='BTsnappen' required>
+
+      </br>
+
+      <label id='BTcijferKey' for='BTcijfer'>Wat voor cijfer geef je het vak?</label>
+      <input type='number' min='1' max='10' id='BTcijfer' name='BTcijfer' required>
+
+      </br>
+
+      <button type="button" id="btButton">Verder</button>
+
 
 
 
@@ -260,51 +271,53 @@
 
       <!---------- RTW ----------->
 
-      <!-- <h2>Vak 5</h2>
+      <h2>Vak 5</h2>
       <h3>Real-Time Web</h3>
 
-      <h4>Wie was je docent?</h4>
-      <label for='RTWdocent'>
-        <input type='text' id='RTWdocent' name='RTWdocent' required>
-      </label>
+      <label id='RTWdocentKey' for='RTWdocent'>Wie was je docent?</label>
+      <input type='text' id='RTWdocent' name='RTWdocent' required>
 
+      </br>
 
       <h4>Tijdens welke weken heb je het vak gevolgd?</h4>
-      <label for='RTWweken1-4'>
-        <input type='radio' id='RTWweken1-4' name='RTWweken14'>
-        Week 1 - 4</label>
+      <label id='RTWweken1-4Key' for='RTWweken1-4'>Week 1 - 4</label>
+      <input type='radio' id='RTWweken1-4' name='RTWweken' value='1-4' checked>
 
-      <label for='RTWweken4-9'>
-        <input type='radio' id='RTWweken5-9' name='RTWweken59'>
-        Week 5 - 9</label>
+      </br>
 
-      <label for='RTWweken10-14'>
-        <input type='radio' id='RTWweken10-14' name='RTWweken1014'>
-        Week 10 - 14</label>
+      <label id='RTWweken5-9Key' for='RTWweken4-9'>Week 5 - 9</label>
+      <input type='radio' id='RTWweken5-9' name='RTWweken' value='5-9'>
 
+      </br>
 
-      <h4>Hoe vond je het vak qua moeilijkheidsgraad?</h4>
-      <label for='RTWmoeilijk'>
-        <input type='text' id='RTWmoeilijk' name='RTWmoeilijk' required>
-      </label>
+      <label id='RTWweken10-14Key' for='RTWweken10-14'>Week 10 - 14</label>
+      <input type='radio' id='RTWweken10-14' name='RTWweken' value='10-14'>
 
+      </br>
+      </br>
 
-      <h4>Wat vond je van de gegeven uitleg bij dit vak?</h4>
-      <label for='RTWuitleg'>
-        <input type='text' id='RTWuitleg' name='RTWuitleg' required>
-      </label>
+      <label id='RTWmoeilijkKey' for='RTWmoeilijk'>Hoe vond je het vak qua moeilijkheidsgraad?</label>
+      <input type='text' id='RTWmoeilijk' name='RTWmoeilijk' required>
 
+      </br>
 
-      <h4>Hoe goed denk je dat je dit vak nu snapt?</h4>
-      <label for='RTWsnappen'>
-        <input type='text' id='RTWsnappen' name='RTWsnappen' required>
-      </label>
+      <label id='RTWuitlegKey' for='RTWuitleg'>Wat vond je van de gegeven uitleg bij dit vak?</label>
+      <input type='text' id='RTWuitleg' name='RTWuitleg' required>
 
+      </br>
 
-      <h4>Wat voor cijfer geef je het vak?</h4>
-      <label for='RTWcijfer'>
-        <input type='number' min='1' max='10' id='RTWcijfer' name='RTWcijfer' required>
-      </label> -->
+      <label id='RTWsnappenKey' for='RTWsnappen'>Hoe goed denk je dat je dit vak nu snapt?</label>
+      <input type='text' id='RTWsnappen' name='RTWsnappen' required>
+
+      </br>
+
+      <label id='RTWcijferKey' for='RTWcijfer'>Wat voor cijfer geef je het vak?</label>
+      <input type='number' min='1' max='10' id='RTWcijfer' name='RTWcijfer' required>
+
+      </br>
+
+      <button type="button" id="rtwButton">Verder</button>
+
 
 
 
@@ -312,57 +325,58 @@
 
       <!---------- HCD ----------->
 
-      <!-- <h2>Vak 6</h2>
+      <h2>Vak 6</h2>
       <h3>Human Centred Design</h3>
 
-      <h4>Wie was je docent?</h4>
-      <label for='HCDdocent'>
-        <input type='text' id='HCDdocent' name='HCDdocent' required>
-      </label>
+      <label id='HCDdocentKey' for='HCDdocent'>Wie was je docent?</label>
+      <input type='text' id='HCDdocent' name='HCDdocent' required>
 
+      </br>
 
       <h4>Tijdens welke weken heb je het vak gevolgd?</h4>
-      <label for='HCDweken1-4'>
-        <input type='radio' id='HCDweken1-4' name='HCDweken14'>
-        Week 1 - 4</label>
+      <label id='HCDweken1-4Key' for='HCDweken1-4'>Week 1 - 4</label>
+      <input type='radio' id='HCDweken1-4' name='HCDweken' value='1-4' checked>
 
-      <label for='HCDweken4-9'>
-        <input type='radio' id='HCDweken5-9' name='HCDweken59'>
-        Week 5 - 9</label>
+      </br>
 
-      <label for='HCDweken10-14'>
-        <input type='radio' id='HCDweken10-14' name='HCDweken1014'>
-        Week 10 - 14</label>
+      <label id='HCDweken5-9Key' for='HCDweken4-9'>Week 5 - 9</label>
+      <input type='radio' id='HCDweken5-9' name='HCDweken' value='5-9'>
 
+      </br>
 
-      <h4>Hoe vond je het vak qua moeilijkheidsgraad?</h4>
-      <label for='HCDmoeilijk'>
-        <input type='text' id='HCDmoeilijk' name='HCDmoeilijk' required>
-      </label>
+      <label id='HCDweken10-14Key' for='HCDweken10-14'>Week 10 - 14</label>
+      <input type='radio' id='HCDweken10-14' name='HCDweken' value='10-14'>
 
+      </br>
+      </br>
 
-      <h4>Wat vond je van de gegeven uitleg bij dit vak?</h4>
-      <label for='HCDuitleg'>
-        <input type='text' id='HCDuitleg' name='HCDuitleg' required>
-      </label>
+      <label id='HCDmoeilijkKey' for='HCDmoeilijk'>Hoe vond je het vak qua moeilijkheidsgraad?</label>
+      <input type='text' id='HCDmoeilijk' name='HCDmoeilijk' required>
 
+      </br>
 
-      <h4>Hoe goed denk je dat je dit vak nu snapt?</h4>
-      <label for='HCDsnappen'>
-        <input type='text' id='HCDsnappen' name='HCDsnappen' required>
-      </label>
+      <label id='HCDuitlegKey' for='HCDuitleg'>Wat vond je van de gegeven uitleg bij dit vak?</label>
+      <input type='text' id='HCDuitleg' name='HCDuitleg' required>
 
+      </br>
 
-      <h4>Wat voor cijfer geef je het vak?</h4>
-      <label for='HCDcijfer'>
-        <input type='number' min='1' max='10' id='HCDcijfer' name='HCDcijfer' required>
-      </label> -->
+      <label id='HCDsnappenKey' for='HCDsnappen'>Hoe goed denk je dat je dit vak nu snapt?</label>
+      <input type='text' id='HCDsnappen' name='HCDsnappen' required>
 
+      </br>
+
+      <label id='HCDcijferKey' for='HCDcijfer'>Wat voor cijfer geef je het vak?</label>
+      <input type='number' min='1' max='10' id='HCDcijfer' name='HCDcijfer' required>
+
+      </br>
 
 
       <!-- <button> Submit -->
       <!-- <span></span> verder -->
       <!-- </button> -->
+
+
+      <button type="button" id="submitButton">Submit</button>
 
     </form>
 
