:pencil2: Added some comments

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!-- De enquete zelf -->
+<!-- The survey -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -41,7 +41,7 @@
       <label id='naamKey' for='naam'>Naam</label>
       <input type='text' id='naam' name='naam' required>
 
-
+      <!-- BR is used quite often so the plain html is still somewhat user friendly -->
       </br>
 
       <label id='studentnummerKey' for='studentnummer'>Studentnummer</label>
